feat: inhance validation

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vee-validate/yup": "^4.11.3",
     "vee-validate": "^4.11.3",
     "vue": "^3.3.4",
     "yup": "^1.2.0"
