--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/vue-select": "^3.16.2",
     "@vee-validate/yup": "^4.11.3",
     "vee-validate": "^4.11.3",
     "vue": "^3.3.4",
+    "vue-select": "^4.0.0-beta.6",
     "yup": "^1.2.0"
   },
   "devDependencies": {
