--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vee-validate": "^4.11.3",
     "vue": "^3.3.4",
     "vue-select": "^4.0.0-beta.6",
+    "vue3-persian-datetime-picker": "^1.2.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
