--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hg-design",
   "private": false,
-  "version": "0.0.6",
+  "version": "0.0.13",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -35,21 +35,23 @@
   },
   "homepage": "https://github.com/hamedg68/hg-design#readme",
   "dependencies": {
+  
+  },
+  "devDependencies": {
     "@types/vue-select": "^3.16.2",
     "@vee-validate/yup": "^4.11.3",
     "vee-validate": "^4.11.3",
     "vue": "^3.3.4",
     "vue-select": "^4.0.0-beta.6",
     "vue3-persian-datetime-picker": "^1.2.2",
-    "yup": "^1.2.0"
-  },
-  "devDependencies": {
+    "yup": "^1.2.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "path": "^0.12.7",
     "rollup-plugin-typescript2": "^0.35.0",
     "vite-plugin-dts": "^3.5.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vue-tsc": "^1.8.5"
+    "vue-tsc": "^1.8.5",
+    "vue3-marquee": "3.2.1"
   }
 }
