--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hg-design",
   "private": false,
-  "version": "0.0.25",
+  "version": "0.0.26",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -34,7 +34,9 @@
     "url": "https://github.com/hamedg68/hg-design/issues"
   },
   "homepage": "https://github.com/hamedg68/hg-design#readme",
-  "dependencies": {},
+  "dependencies": {
+    "vue3-persian-datetime-picker": "^1.2.2"
+  },
   "devDependencies": {
     "@types/vue-select": "^3.16.2",
     "@vee-validate/yup": "^4.11.3",
@@ -42,7 +44,6 @@
     "vue": "^3.3.4",
     "vue-select": "^4.0.0-beta.6",
     "yup": "^1.2.0",
-    "vue3-persian-datetime-picker": "^1.2.2",
     "@vitejs/plugin-vue": "^4.2.3",
     "path": "^0.12.7",
     "rollup-plugin-typescript2": "^0.35.0",
